# HomeWork_1

./: .env-example  .gitignore  README.md  pyproject.toml
config/: setup.json
docs/: deep_learning_plan.md  deep_learning_prd.md  deep_learning_todo.md  first_feedback_plan.md  first_feedback_prd.md  first_feedback_todo.md  generate_dataset_plan.md  generate_dataset_prd.md  generate_dataset_todo.md  interface_web_plan.md  interface_web_prd.md  interface_web_todo.md  second_feedback_plan.md  second_feedback_prd.md  second_feedback_todo.md  sinos_creation_plan.md  sinos_creation_prd.md  sinos_creation_todo.md
results/: dataset.json
src/: main.py
src/homework_1/: __init__.py  constants.py
src/homework_1/sdk/: __init__.py  sdk.py
src/homework_1/services/: __init__.py  generator.py  sinus.py
src/homework_1/services/models/: __init__.py  math_utils.py  trainer.py
src/homework_1/services/models/fcn/: __init__.py  model.py
src/homework_1/services/models/lstm/: __init__.py  model.py
src/homework_1/services/models/rnn/: __init__.py  model.py
src/homework_1/shared/: __init__.py  config.py  gatekeeper.py  version.py
src/homework_1/shared/gui/: __init__.py  app.py  callbacks_playground.py  callbacks_training.py  plots_helper.py  screen1.py  screen2.py  screen3.py
tests/unit/: test_generator.py  test_gui.py  test_models.py  test_sinus.py
