[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homework-1"
version = "1.0.0"
description = "Guidelines-compliant professional Python project homework 1"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Amir Mtanes", email = "amirmt@users.noreply.github.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "dash>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "*/tests/*",
    "src/**/gui/*"
]

[tool.coverage.report]
fail_under = 85
